customFunction in input data

--- a/scheduler/views/inputDataView.html
+++ b/scheduler/views/inputDataView.html
@@ -60,6 +60,10 @@
     <br/>
     <input id="moduloInput" type="text" placeholder="optional modulo"></input>
     <br/>
+    <label>isCustomFunction</label>
+    <input id="isCustomFunction" type="checkbox" placeholder="optional modulo"></input>
+    <br/>
+    <textarea class="hidden" rows=20 cols=70 id="customFunction"></textarea>
     <button id="generateBtn">Generate data</button>
     <br/>
     <button id="saveBtn">Save data</button>
