Optionally resetting webworkers on config change

--- a/scheduler/views/computationConfig.html
+++ b/scheduler/views/computationConfig.html
@@ -52,6 +52,12 @@
     <label>Additional input data?</label>
     <input id="includesInputData" type="checkbox"></input>
     <br/>
+    <label>Restart all workers on config change?</label>
+    <input id="restartAllWorkersOnConfigChange" type="checkbox"></input>
+    <br/>
+    <label>Provide last approved result in config?</label>
+    <input id="provideLastResultInConfig" type="checkbox"></input>
+    <br/>
     <button id="saveBtn">Save configuration</button>
 
     <table id="inputDataTable" class="display" width="100%"></table>
